packages/salesforce-appexchange/force-app/main/default/objects/SZL_Config__mdt/SZL_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration values for the SZL Platform Connector — API endpoint, auth tokens, and feature flags. One record per connected SZL tenant.</description>
    <label>SZL Config</label>
    <pluralLabel>SZL Configs</pluralLabel>
</CustomObject>