packages/salesforce-appexchange/force-app/main/default/objects/SZL_Config__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <type>Text</type>
    <length>512</length>
</CustomField>