packages/salesforce-appexchange/force-app/main/default/objects/SZL_Config__mdt/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <label>Org ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>