packages/salesforce-appexchange/force-app/main/default/objects/SZL_Config__mdt/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <type>Text</type>
    <length>512</length>
</CustomField>