packages/salesforce-appexchange/force-app/main/default/objects/SZL_Config__mdt/fields/Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sync_Enabled__c</fullName>
    <label>Sync Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>